# rust-mjpg-streamer

./: Cargo.toml  LICENSE  README.md  index.html  rustfmt.toml
.cargo/: config.toml
.github/workflows/: all.yml
src/: main.rs
